# sigma-rule-syntax

./: .gitignore  CHANGELOG.md  LICENSE  README.md  sigma-rule-syntax.cabal
app/: Main.hs
golden/normalize/: image_load_wsman_provider_image_load.json  microsoft365_pst_export_alert.json  notice.md  proc_creation_win_7zip_exfil_dmp_files.json  proc_creation_win_7zip_exfil_dmp_files.yml  proc_creation_win_powershell_base64_mppreference.json  proc_creation_win_wmic_unquoted_service_search.json  zeek_dns_torproxy.json
src/Sigma/: Condition.hs  Rule.hs
src/Sigma/Rule/: Insight.hs  Internal.hs  Parser.y  Tokenize.x
test/: Main.hs
