cabal-version:      3.4
name:               sigma-rule-syntax
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrew Martin
maintainer:         amartin@layer3com.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

library
  exposed-modules:
    Sigma.Rule
  other-modules:
    Sigma.Rule.Internal
    Sigma.Rule.Parser
    Sigma.Rule.Tokenize
  build-depends:
    , base >=4.14.3.0
    , yaml >=0.11.10
    , aeson >=2.0
    , text >=1.2
    , containers >=0.6.5
    , vector >=0.12
    , chronos >=1.1.5
    , uuid >=1.3.15
    , attoparsec >=0.14.4
    , bytestring >=0.11
    , array >=0.5.4
    , scientific >=0.3.7
  build-tool-depends:
    , alex:alex >=3.2.7.1
  hs-source-dirs: src
  default-language: GHC2021
  ghc-options: -Wall -O2
  build-depends: 

test-suite test
  build-depends:
    , base >=4.14.3.0
    , aeson >=2.0
    , bytestring
    , containers >=0.6.5
    , filepath >=1.4.2.1
    , sigma-rule-syntax
    , tasty >=1.2.3
    , tasty-golden >=2.3.5
    , text >=1.2
    , yaml >=0.11.10
    , aeson-pretty >=0.8.9
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
